# prokaryotes

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  slack.example.yaml  vitest.config.js
.claude/: settings.local.json
.github/workflows/: tests-js.yml  tests.yml
database/: README.md
database/neo4j/: 000001_init.up.cypher
database/postgres/: 000001_init.up.sql
docker/: app.Dockerfile
evals/: README.md
evals/t1_file_ops_change_request/: check.sh  meta.toml  prompt.md
evals/t1_formatted_report/: check.py  meta.toml  prompt.md
evals/t1_wildcard_match/: check.py  check.sh  meta.toml  prompt.md
evals/t2_cross_module_bug/: check.sh  meta.toml  prompt.md
evals/t2_invoice_pipeline/: check.sh  meta.toml  prompt.md
evals/t2_pipeline_diagnosis/: check.sh  meta.toml  prompt.md
project/: README.md
project/issues/: README.md
project/wip/: README.md
prokaryotes/: README.md  base.py  callbacks_v1.py  emb_v1.py  graph_v1.py  imap_v1.py  llm_v1.py  loop_v1.py  models_v1.py  observers_v1.py  search_v1.py  tool_params_v1.py  ui.html  ui_v1.html  utils.py  v1.py  web_base.py  web_base_v1.py  web_v1.py
prokaryotes/anthropic_v1/: __init__.py  script_harness.py  web_harness.py
prokaryotes/api_v1/: models.py
prokaryotes/context_v1/: __init__.py  compaction.py  conversation_sync.py
prokaryotes/conversation_v1/: __init__.py  models.py  project.py  reconcile.py  source_id.py
prokaryotes/eval_v1/: harness.py  models.py  tasks.py
prokaryotes/harness_v1/: __init__.py  base.py  eval.py  script.py  slack.py  web.py
prokaryotes/loop/: v1.py
prokaryotes/observer_v1/: base.py  context_observer.py  fact_observer.py  named_entity_observer.py  question_observer.py  summarizing_observer.py  topic_observer.py  user_fact_observer.py  user_question_observer.py
prokaryotes/openai_v1/: __init__.py  script_harness.py  web_harness.py
prokaryotes/search_v1/: __init__.py  context_partitions.py  conversations.py  facts.py  named_entities.py  prompts.py  questions.py  responses.py  tool_calls.py  topics.py
prokaryotes/slack_v1/: __init__.py  client.py  replay.py  streaming.py
prokaryotes/tools_v1/: README.md  base.py  base_path_tool.py  builtins.py  file_tool.py  get_chat_history.py  read_file.py  recall_responses.py  scan_directory.py  search_email.py  shell_command.py  think.py
prokaryotes/utils_v1/: context_discovery.py  context_utils.py  http_utils.py  llm_utils.py  logging_utils.py  os_utils.py  personality_utils.py  system_message_utils.py  text_utils.py  time_utils.py
prokaryotes/v1/: main.py
prokaryotes/web_v1/: README.md  __init__.py  auth.py  compaction.py  partition_sync.py  stores.py
scripts/: README.md  cli.py  emb.py  eval.py  imap_ingest.py  search_init.py  slack.py  ui.html  ui_v1.html  web.py
scripts/html/: login.html  register.html  ui.html
scripts/static/: common-auth.css  common-auth.js  common.css  conversation_client.js  login.html  register.html  ui.html  ui.js
tests/: README.md  conftest.py  setup.js  test_anthropic_v1.py  test_api_v1_models.py  test_compaction_provider.py  test_compaction_rebuild.py  test_compaction_status.py  test_compaction_swap.py  test_emb_v1.py  test_eval_harness.py  test_imap_v1.py  test_observer_v1_seeding.py  test_openai_v1.py  test_read_file_v1.py  test_scan_directory_v1.py  test_script_harness_prompt.py  test_search_v1_context_partitions.py  test_search_v1_named_entities.py  test_search_v1_prompts.py  test_search_v1_tool_calls.py  test_search_v1_topics.py  test_shell_command.py  test_system_message_utils.py  test_think.py  test_tool_v1_shell_command.py  test_utils_v1_text_utils.py  test_web_v1.py  ui.test.js
tests/integration_tests/: conftest.py  env_bootstrap.py  fakes.py  judges.py  stream_utils.py
tests/ui_tests/: chat_protocol_integration.test.js  chat_ui_behaviors.test.js  conversation_client.test.js  file_tool_ui.test.js  ui.test.js
tests/unit_tests/: _builders.py  _fakes.py  _llm_fakes.py  _slack_fakes.py  context_partition_utils.py  test_anthropic_v1.py  test_api_v1_models.py  test_api_v1_models_annotations.py  test_apply_policy.py  test_assistant_guardrail.py  test_case_a_lifted_state.py  test_compacted_prefix_split.py  (+58 more)
(+186 files in other folders)
