[project]
name = "prokaryotes"
version = "0.1.0"
description = "Denizens of the primoridal soup"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "bcrypt",
    "beautifulsoup4",
    "certifi",
    "elasticsearch[async]",
    "fastapi",
    "imapclient",
    "itsdangerous",
    "lxml",
    "mistune",
    "neo4j",
    "openai",
    "python-dotenv",
    "redis",
    "sentence-transformers",
    "sqlalchemy[asyncio]",
    "starsessions[redis]",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["prokaryotes"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=prokaryotes"
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
include = ["prokaryotes*"]
