[project]
name = "prokaryotes"
version = "0.1.0"
description = "Denizens of the primoridal soup"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "anthropic",
    "asyncpg",
    "bcrypt",
    "certifi",
    "elasticsearch[async]",
    "fastapi",
    "httpx",
    "itsdangerous",
    "neo4j",
    "openai",
    "python-dotenv",
    "python-multipart",
    "redis[hiredis]",
    "slack-sdk",
    "starsessions[redis]",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
test = [
    "asgi-lifespan>=2.1,<3",
    "pytest",
    "pytest-asyncio>=1.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["prokaryotes"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=prokaryotes"
markers = [
    "integration: live DB integration tests (Tier B); requires docker-compose stack",
    "live: live LLM smoke tests (Tier A); requires real API keys",
]
testpaths = [
    "tests/unit_tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes and respect the line length
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = []
select = ["E", "F", "I", "UP", "B"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["prokaryotes"]

[tool.setuptools.packages.find]
include = ["prokaryotes*"]

